# summer26-guard-railing-sensitive-data

./: .gitignore  Deanonymization_with_noise_(1).ipynb  Final_Aditya.ipynb  Final_Aditya_copy_with_morw_rows.ipynb  Final_Aditya_quarter_data_unif_resampling.ipynb  Income Dataset Prelim.ipynb  LICENSE  Netflix_deterministic_anon_plus_baseline.ipynb  PROJECT_STRUCTURE_GUIDE.md  Privacy_v_fidelity_of_downstream_ML  README.md  TODOS  Tech_Stack.md  Untitled51.ipynb  Untitled53.ipynb  environment.yml  main.py  pyproject.toml
.github/workflows/: tests.yml
notebooks/: 01_synthetic_netflix_generator.ipynb  02_ml_deanonymization_attacks.ipynb  03_als_downstream_and_anonymization_feedback.ipynb  04_empirical_privacy_utility_study.ipynb  Deanonymization_with_noise.ipynb  README.md
notebooks/old/: adult_anonym.ipynb  adult_deanonym_classic.ipynb  adult_deanonym_ml.ipynb  erick_ammar.ipynb  erick_ammar_netflix_data.ipynb  imdb get user list.ipynb  linkage_attack.ipynb  multiprocessing_helper.py  netflix.ipynb  planktonrules.ipynb
notes/: ammar_notes.ipynb
reports/: README.md  linkage_planktonrules_candidates.csv  linkage_planktonrules_facts.csv  linkage_planktonrules_matched_titles.csv  privacy_k_anonymity_summary.csv  privacy_linkage_summary.csv  privacy_linkage_trials.csv  utility_rmse_summary.csv
src/guardrails_sensitive_data/: __init__.py  __main__.py  anonymization.py  cli.py  data.py  imdb.py  linkage.py  netflix_io.py  paths.py  recommender.py  reporting.py
tests/: test_netflix_privacy_pipeline.py
